--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -13,12 +13,14 @@
         "services img";
     background-color: $light-grey;
     padding-left: 92px;
+    
 
     h2 {
         grid-area: h2;
         justify-self: self-start;
         margin: 0;
-        padding-top: 50px;
+        padding-top: 60px;
+        margin-bottom: 35px;
     }
 
     .section-title-text {
@@ -26,8 +28,9 @@
         justify-self: self-start;
         max-width: 470px;
         text-align: left;
-        margin-bottom: -50px;
+        margin-bottom: -30px;
         margin-top: -30px;
+
     }
 
     .services-group {
@@ -35,6 +38,7 @@
         display: grid;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: repeat(2, 50%);
+        margin-bottom: 10px;
     }
 
     .services-item {
@@ -44,9 +48,7 @@
 
     .services-img {
         grid-area: img;
-        
-        @include for-tablet-landscape-up {
-            display: none;
-        }
+        width: 100%;
+        height: 100%;
     }
 }
