--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -6,6 +6,7 @@
         "h2"
         "title"
         "img-wrap";
+    padding-top: 15px;
 
     h2 {
         grid-area: h2;
@@ -19,6 +20,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 10px;
+        padding: 0 10px 0 10px;
 
         .mywork-item {
             position: relative;
@@ -101,6 +103,12 @@
                 -ms-transform: scale(1);
                 transform: scale(1);
             }
+        }
+    }
+    @include for-tablet-landscape-up {
+        .section-title-text {
+            margin-bottom: 0;
+            margin-top: 0;
         }
     }
 }
