--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -53,7 +53,7 @@ header {
         .menu__btn {
             display: none;
         }
-
+        //900px
         @include for-tablet-landscape-up {
             .menu {
                 position: fixed;
@@ -138,13 +138,15 @@ header {
 
                     +.menu {
                         right: 0;
-                        // opacity: 1;
-                        // z-index: 5;
                     }
                 }
 
             }
 
         }
+    }
+    //600px
+    @include for-tablet-portrait-up {
+
     }
 }
