--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -49,7 +49,7 @@
         }
         
     }
-
+    //900px
     @include for-tablet-landscape-up {
         .first-text {
             h1 { 
@@ -62,6 +62,24 @@
             .first-p {
                 &::after {
                     left: 42%;
+                }
+            }
+        }
+    }
+    //600px
+    @include for-tablet-portrait-up {
+        .first-text {
+            h1 { 
+                font-size: 40px;
+            }
+
+            h3 {
+                font-size: 20px;
+            }
+            .first-p {
+                font-size: 20px;
+                &::after {
+                    left: 39%;
                 }
             }
         }
