--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -13,7 +13,7 @@
         "services img";
     background-color: $light-grey;
     padding-left: 92px;
-    
+
 
     h2 {
         grid-area: h2;
@@ -50,5 +50,17 @@
         grid-area: img;
         width: 100%;
         height: 100%;
+    }
+
+    //600px 
+    @include for-tablet-portrait-up {
+        grid-template-areas:
+            "h2 h2"
+            "title title"
+            "services services";
+        
+        .services-img {
+            display: none;
+        }
     }
 }
