--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -110,5 +110,8 @@
             margin-bottom: 0;
             margin-top: 0;
         }
+        .mywork-items {
+            grid-template-columns: 1fr 1fr;
+        }
     }
 }
