--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -31,4 +31,20 @@
             grid-template-columns: repeat(2, 50%);
         }
     }
+    //599px
+    @include for-phone-only {
+        .about-group {
+            grid-template-columns: 1fr;
+        }
+        .about-item {
+            width: 70%;
+            height: auto;
+        }
+        .section-title-text {
+            font-size: 20px;
+            line-height: 40px;
+            max-height: 100%;
+            margin-bottom: 10px;
+        }
+    }
 }
