--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -86,5 +86,13 @@
             max-width: 500px;
         }
     }
-
+    //599px
+    @include for-phone-only {
+        .inp-name {
+            max-width: 300px;
+        }
+        .inp-email {
+            max-width: 300px;
+        }
+    }
 }
