--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -39,17 +39,17 @@
         grid-template-rows: 1fr 1fr;
         grid-template-columns: repeat(2, 50%);
         margin-bottom: 10px;
-    }
 
-    .services-item {
-        max-width: 164px;
-        max-height: 143px;
-    }
+        .services-item {
+            max-width: 164px;
+            max-height: 143px;
+        }
 
-    .services-img {
-        grid-area: img;
-        width: 100%;
-        height: 100%;
+        .services-img {
+            grid-area: img;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     //600px 
@@ -58,9 +58,31 @@
             "h2 h2"
             "title title"
             "services services";
-        
+
         .services-img {
             display: none;
         }
+    }
+
+    //599px
+    @include for-phone-only {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "h2"
+            "title"
+            "services";
+
+        .services-group {
+            grid-template-rows: 1fr;
+            grid-template-columns: 1fr;
+            margin-bottom: 10px;
+            margin-top: 20px;
+
+            .services-item {
+                max-width: 90%;
+                max-height: auto;
+            }
+        }
+
     }
 }
