--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -105,13 +105,27 @@
             }
         }
     }
+
     @include for-tablet-landscape-up {
         .section-title-text {
             margin-bottom: 0;
             margin-top: 0;
         }
+
         .mywork-items {
             grid-template-columns: 1fr 1fr;
         }
+    }
+
+    //599px
+    @include for-phone-only {
+        .section-title-text {
+            margin-bottom: 10px;
+            margin-top: 0;
+        }
+        .mywork-items {
+            grid-template-columns: 1fr;
+        }
+
     }
 }
